--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "keeper-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://premchauhan1.github.io",
+  "homepage": "https://premchauhan1.github.io/Chatgpt_clone_using_react",
   "dependencies": {
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
